# tei-reranker-proxy

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yaml
src/: main.rs
